refactor & bugifx: fix bug where to didnt update, chhange styles, disable active timestamp

--- a/src/components/plotButton/plotButton.module.scss
+++ b/src/components/plotButton/plotButton.module.scss
@@ -1,3 +1,19 @@
-.plotButton{
-    background-color: grey;
+.plotButton {
+  box-shadow: none;
+  outline: none;
+  background-color: rgb(88, 139, 143);
+  border: none;
+  margin-right: 1em;
+  padding: 1em;
+  transition: 0.1s;
+  &:hover {
+    background-color: rgb(58, 158, 63);
+    cursor: pointer;
+  }
+  &:disabled {
+    pointer-events: none;
+    background-color: rgba(0, 0, 0, 0.212);
+    box-shadow: 0px 0px 5px black;
+    color: white;
+  }
 }
