--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap");
 
-$mainbgcolor: #2b3648;
+$mainBackground: #e7e7b9;
+$headerBackground: rgb(47, 87, 14);
 
 $mainFont: "Montserrat", sans-serif;
