--- a/src/styles/globalStyle.scss
+++ b/src/styles/globalStyle.scss
@@ -4,7 +4,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: $mainFont;
-  background-color: $mainbgcolor;
+  background-color: $mainBackground;
 }
 html {
   box-sizing: border-box;
